deeplink with payment website

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,19 +27,10 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="sample"
-                    android:host="project" />
+                <data android:scheme="https"
+                    android:host="test" />
             </intent-filter>
         </activity>
-
-        <receiver
-            android:name=".utils.PushSimulationReceiver"
-            android:exported="true"
-            tools:ignore="ExportedReceiver">
-            <intent-filter android:priority="999">
-                <action android:name="project.sample.deeplinking.push.receiver" />
-            </intent-filter>
-        </receiver>
     </application>
 
 </manifest>
