remove unnecessary import

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="project.sample.deeplinking">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -25,10 +24,13 @@
 
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="https"
-                    android:host="test" />
+
+                <data
+                    android:host="test"
+                    android:scheme="https" />
             </intent-filter>
         </activity>
     </application>
